RESOLVED FIXED300171
Leak of UNMutableNotificationContent in WebPushD::WebPushDaemon::setAppBadge()
https://bugs.webkit.org/show_bug.cgi?id=300171
Summary Leak of UNMutableNotificationContent in WebPushD::WebPushDaemon::setAppBadge()
David Kilzer (:ddkilzer)
Reported 2025-10-04 09:02:31 PDT
Leak of UNMutableNotificationContent in WebPushD::WebPushDaemon::setAppBadge()
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-04 09:02:50 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-10-04 09:17:53 PDT
EWS
Comment 3 2025-10-05 07:51:54 PDT
Committed 301025@main (80de1e713f2f): <https://commits.webkit.org/301025@main> Reviewed commits have been landed. Closing PR #51810 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.