Leak of UNMutableNotificationContent in WebPushD::WebPushDaemon::setAppBadge() <https://bugs.webkit.org/show_bug.cgi?id=300171> <rdar://161957380>

Reviewed by Chris Dumez.

Regressed in 281776@main.

* Source/WebKit/webpushd/WebPushDaemon.mm:
(WebPushD::WebPushDaemon::setAppBadge):
- Use RetainPtr/adoptNS() to fix leak.

Canonical link: https://commits.webkit.org/301025@main